website/i18n/ru/docusaurus-plugin-content-docs/version-0.0.27/concepts/protocol.md
---
title: "Принадлежащий человеку протокол памяти"
sidebar_position: 1
description: "Engram — это протокол, который делает память ИИ-агента проверяемой, переносимой и управляемой людьми."
---

# Понимание Engram

Прочтите это перед изучением руководства по командам. Engram полезен тем, кто именно владеет памятью, а не количеством поддерживаемых команд.

## Модель в одном предложении

Engram — это файловый протокол, который позволяет ИИ-агентам использовать долговечную память, в то время как человек решает, что именно становится долговечным.

## Что такое Engram

Engram — это центр памяти знаний для хранения:

- правил проекта
- командных решений
- повторяющихся рабочих процессов (workflows)
- долговечных фактов
- личных предпочтений, переносимых между проектами

Память хранится в виде обычных файлов Markdown. Индекс, граф, хэши и файлы адаптеров существуют исключительно для того, чтобы сделать работу с этим Markdown удобнее и безопаснее.

## Чем Engram не является

Engram — это НЕ:

- скрытый мозг агента
- закрытое хранилище памяти, принадлежащее вендору
- замена проектной документации
- векторная база данных, претендующая на роль абсолютной истины
- автоматический регистратор, сохраняющий всё подряд навсегда

Агенты могут предлагать элементы памяти. Люди одобряют, отклоняют, редактируют, архивируют и владеют памятью.

## Ключевое обещание

Engram стремится сделать память ИИ:

- доступной для проверки: вы можете читать её в любом текстовом редакторе
- переносимой: вы можете синхронизировать её через Git и использовать с разными агентами
- исправляемой: неверная память может быть архивирована с указанием причины, вместо того чтобы незаметно портить будущую работу
- приватной по умолчанию: правила исключения (ignore rules) и барьеры одобрения предотвращают случайный захват данных
- простой по дизайну: файлам Markdown доверять проще, чем невидимому состоянию платформы

## Уровни системы

| Уровень | Значение |
| --- | --- |
| Markdown | Долговечный источник истины (source of truth) |
| JSON index | Слой быстрого поиска |
| JSON graph | Слой маршрутизации по темам и взаимосвязям |
| Hashes | Проверка целостности данных |
| Approval | Граница доверия перед записью |
| Ignore rules | Контроль приватности |
| Git | История изменений, переносимость, рецензирование и восстановление |
| Agent adapters | Слой удобства для Codex, Claude, Cursor, Gemini и других агентов |

Сгенерированные файлы JSON помогают агентам быстрее находить память, но они не являются первоисточником. Если сгенерированные файлы расходятся с Markdown, Markdown имеет приоритет.

## Жизненный цикл памяти

1. Сессия, файл или заметка человека содержат полезные знания.
2. Агент предлагает лаконичные кандидаты в память.
3. Человек одобряет все, выбирает часть, добавляет примечание или отклоняет предложения.
4. Engram записывает утвержденную память в Markdown.
5. Engram обновляет хэши, индекс, граф и журнал изменений (changelog).
6. Будущие агенты загружают только ту память, которая относится к текущей задаче.
7. Если память становится неверной, Engram архивирует её с указанием причины.

Этот жизненный цикл поддерживает память в актуальном состоянии, не делая её скрытой.

## Человек, Агент, Engram, Git

| Действующее лицо | Роль |
| --- | --- |
| Человек | Решает, что становится долговечной памятью |
| Агент | Замечает паттерны и предлагает кандидатов |
| Engram | Следит за схемой, безопасностью, маршрутизацией, одобрением и обслуживанием |
| Git | Переносит память между машинами и хранит историю изменений |

Агент помогает, но не владеет памятью.

## Хорошая память

Хорошая память в Engram:

- достаточно стабильна, чтобы иметь значение на следующей неделе
- достаточно конкретна, чтобы её можно было маршрутизировать позже
- достаточно коротка, чтобы поместиться в контекст агента
- достаточно безопасна, чтобы делиться ею в рамках выбранной области видимости
- написана как правило (rule), навык (skill) или элемент знаний (knowledge)

Плохая память — это временный шум чата, секреты, учетные данные, сиюминутные предположения или факты, которые никто не утверждал.

## Область видимости (Scope)

Память проекта (workspace) хранится в:

```text
<project>/.agents/.engram/
```

Глобальная память опциональна и хранится там, где укажет пользователь.

Память проекта приоритетна. Глобальная память используется для переносимых настроек, личных привычек или дефолтных правил команды для всех репозиториев.

## Почему не использовать только встроенную память агента?

Встроенная память удобна, но её трудно проверить, сравнить (diff), экспортировать, передать или исправить. Часто она привязана к одному приложению или аккаунту.

Engram делает долговечный слой видимым. Встроенная память всё ещё может помогать, но Engram должен быть основным контролируемым источником, когда знания имеют значение.

## Известные ограничения

Поиск Engram по умолчанию — это детерминированный лексический поиск. `engram search --semantic` добавляет детерминированное локальное сходство слов, а не семантический поиск на основе нейросетевых эмбеддингов. Векторы графа — это локальные хэшированные векторы слов. Обнаружение противоречий носит рекомендательный характер. Настройки шифрования существуют, но зашифрованное хранилище пока не реализовано.

Эти ограничения заявлены открыто. Engram стремится честно сообщать пользователям, что работает уже сегодня, а что является планом на будущее.

Далее: [Быстрый старт для ИИ-агента](../quickstart.md).
